Added static create event btn

--- a/client/src/stylesheets/Header.css
+++ b/client/src/stylesheets/Header.css
@@ -2,12 +2,13 @@
   box-sizing: border-box;
   display: flex;
   background-color: var(--primary);
-  padding: 20px 0;
+  padding: 20px 20px;
   /* justify-content: center; */
   position: fixed;
   height: var(--header-height);
   width: 100%;
   z-index: 1000;
+  align-items: flex-end;
 }
 
 #site-header>.links {
@@ -59,4 +60,12 @@
 
 .dropdown button:hover {
   background-color: #f0f0f0;
+}
+
+.create-event-btn:hover {
+  background-color: #e0e0ff;
+}
+
+.create-event-btn:active {
+  background-color: #eef;
 }
