--- a/client/src/stylesheets/Header.css
+++ b/client/src/stylesheets/Header.css
@@ -63,20 +63,27 @@
 }
 
 .create-event-btn {
+  border: 1px solid #ccc;
   border-radius: 20px;
   height: 30px;
   padding: 4px 20px;
-  background-color: var(--secondary);
   line-height: 20px;
   align-items: center;
   display: flex;
-  border: none;
 }
 
 .create-event-btn:hover {
-  background-color: color-mix(in oklab, var(--secondary) 90%, black);
+  background-color: #ddd;
 }
 
 .create-event-btn:active {
-  background-color: color-mix(in oklab, var(--secondary) 90%, white);
+  background-color: #bbb;
+}
+
+#search-bar input {
+  width: 70%;
+  padding: 8px 12px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  font-size: 14px;
 }
